refactor: add components

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -19,7 +19,7 @@ parser: "vue-eslint-parser"
 overrides:
   [
     {
-      files: ["pages/**/*.vue", "layouts/**/*.vue"],
+      files: ["pages/**/*.vue", "layouts/**/*.vue", "components/**/*.vue"],
       rules: { "vue/multi-word-component-names": 0 },
     },
   ]
